<resources>
    <string name="app_name">My Modules</string>
    <string name="c203">C203 Web Appln Development in php</string>
    <string name="c346">C346 Mobile App Development</string>
    <string name="c235">C235 IT Security and Management</string>
    <string name="c206">C206 Software Development Process</string>
    <string name="c218">C218 UI/UX Design for Apps</string>
    <string name="g953">G953 Life Skills III</string>
    <string name="module">MODULES</string>
    <string name="info"></string>
    <string name="code">Module Code:</string>
    <string name="back">BACK</string>

</resources>