<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/study"
    android:padding="16dp"
    tools:context=".Modules">

    <TextView
        android:id="@+id/Code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code" />

    <TextView
        android:id="@+id/Modinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back" />

</LinearLayout>